--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,34 @@
+server.port=2020
+##spring.mvc.view.suffix=.jsp
+##spring.mvc.view.prefix=/view/
+## Spring datasource.
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/expense
+spring.datasource.username=root
+spring.datasource.password=root
+ 
+## Hibernate properties.
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
 
-spring.main.banner-mode=off
+#spring.main.banner-mode=off
+#logging.file=/my-logs/app.log
+
+## Show sql query.
+spring.jpa.show-sql=true
+
+##spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
+
+#logging.level.org.springframework.web=ERROR
+#logging.level.com.howtodoinjava=DEBUG
+
+# Logging pattern for the console
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+ 
+# Logging pattern for file
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.console.immediateFlush=true
+#logging.file=f:/users/howtodoinjava/application-debug.log
 logging.file=my-logs/app.log
 
-#for this line color log print
-spring.output.ansi.enabled=DETECT
 
-log4j.rootCategory=INFO, stdout
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%d{yy-MMM-dd E HH:mm:ss:SSS}] [%p] [%c{2}:%L] - %m%n
